--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,8 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'build-pipeline-base-image'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/mlops-pipeline-base:latest', '.']
+  options:
+  logging: CLOUD_LOGGING_ONLY
 
 # Paso 2: Subir la imagen base a Artifact Registry
 - name: 'gcr.io/cloud-builders/docker'
